# airbyte

./: .pre-commit-config.yaml
airbyte-integrations/connectors/destination-mariadb/: README.md  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/destination-mariadb-langchain/: README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/destination-mariadb-langchain/destination_mariadb_langchain/: config.py  destination.py  mariadb_processor.py  run.py
airbyte-integrations/connectors/destination-mariadb-langchain/destination_mariadb_langchain/mariadb/: MariadbImporter.py
airbyte-integrations/connectors/destination-mariadb-langchain/integration_tests/: integration_test.py  spec.json
airbyte-integrations/connectors/destination-mariadb-langchain/unit_tests/: processor_test.py
airbyte-integrations/connectors/destination-mariadb/destination_mariadb/: config.py  destination.py  mariadb_processor.py
airbyte-integrations/connectors/destination-mariadb/destination_mariadb/common/catalog/: catalog_providers.py
airbyte-integrations/connectors/destination-mariadb/destination_mariadb/common/sql/: mariadb_types.py
airbyte-integrations/connectors/destination-mariadb/integration_tests/: integration_test.py
airbyte-integrations/connectors/destination-mariadb/unit_tests/: processor_test.py
airbyte-integrations/connectors/source-imap/: README.md  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-imap/source_imap/: __init__.py  run.py  source.py  spec.yaml  streams.py
airbyte-integrations/connectors/source-langchain-docling-loader/: .dockerignore  .gitignore  Dockerfile  README.md  acceptance-test-config.yml  build_customization.py  main.py  metadata.yaml  pyproject.toml  setup.py
airbyte-integrations/connectors/source-langchain-docling-loader/integration_tests/: acceptance.py  config.json  configured_catalog.json  invalid_config.json
airbyte-integrations/connectors/source-langchain-docling-loader/integration_tests/sample/: test.txt
airbyte-integrations/connectors/source-langchain-docling-loader/sample_files/: config.json  configured_catalog.json
airbyte-integrations/connectors/source-langchain-docling-loader/sample_files/examples/: BSI.html
airbyte-integrations/connectors/source-langchain-docling-loader/sample_files/examples/BSI-Dateien/: custom.css  global.js  large.css  medium.css  small.css
airbyte-integrations/connectors/source-langchain-docling-loader/sample_files/examples/prince_furniture/: Prince_Furniture.html
airbyte-integrations/connectors/source-langchain-docling-loader/sample_files/examples/prince_furniture/Prince Furniture_files/: PrinceFurniture.css  blueberry.css  jquery.min.js
airbyte-integrations/connectors/source-langchain-docling-loader/sample_files/examples/prince_furniture/Prince_Furniture_files/: jquery.blueberry.js
airbyte-integrations/connectors/source-langchain-docling-loader/sample_files/examples/prince_furniture_catalog/: Prince Furniture Catalogue.html  Prince_Furniture_Catalogue.html
airbyte-integrations/connectors/source-langchain-docling-loader/sample_files/examples/prince_furniture_catalog/Prince Furniture Catalogue_files/: PrinceCatalogue.css
airbyte-integrations/connectors/source-langchain-docling-loader/scripts/: build.sh  load_models.py  pip_cleaner
airbyte-integrations/connectors/source-langchain-docling-loader/source_langchain_docling_loader/: __init__.py  file_source.py  run.py  source.py  spec.json  spec.yaml
airbyte-integrations/connectors/source-langchain-docling-loader/source_langchain_docling_loader/schemas/: docling_documents.json  file.json
airbyte-integrations/connectors/source-langchain-docling-loader/testfiles/prince_furniture/: Prince Furniture.html
airbyte-integrations/connectors/source-langchain-docling-loader/testfiles/prince_furniture/Prince Furniture_files/: jquery.blueberry.js
airbyte-integrations/connectors/source-langchain-docling-loader/unit_tests/: test_incremental_streams.py  test_source.py  test_streams.py
